# startd8-sdk

./: .contextcore.yaml  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ACTION_PLAN_ITERATIVE_WORKFLOW.md  AGENT_CONFIGURATION_FIX.md  AGENT_TROUBLESHOOTING_GUIDE.md  ALL_ISSUES_COMPLETE.md  CHANGELOG.md  CHANGELOG_PIPX.md  CHANGES_SUMMARY.md  CLAUDE.md  CLOSURE-LEDGER.md  CODE_REVIEW_API_KEY_MANAGER.md  CODE_REVIEW_DEC_7_2025.md  CODE_REVIEW_ENTERPRISE.md  CODE_REVIEW_EXECUTIVE_SUMMARY.md  CODE_REVIEW_INDEX.md  CODE_REVIEW_INPUT_VALIDATION.md  CODE_REVIEW_ITERATIVE_WORKFLOW.md  CODE_REVIEW_ROADMAP.md  CODE_REVIEW_SENIOR_DEV.md  CODE_REVIEW_SUMMARY.md  COMMIT_MESSAGE.md  CRITICAL_FIXES_APPLIED.md  CURRENT_SESSION_SUMMARY.md  ENTERPRISE_ARCHITECTURE_REVIEW.md  ENTERPRISE_CODE_REVIEW_COST_TRACKING.md  ENTERPRISE_CODE_REVIEW_WEEK2.md  ERROR_HANDLING_AND_OBSERVABILITY_REVIEW.md  ERROR_HANDLING_QUICK_REFERENCE.md  FILE_INPUT_FEATURE.md  GENERIC_EXCEPTION_HANDLERS_TO_FIX.md  HELP_SYSTEM_USAGE_GUIDE.md  HELP_TESTING_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_EVENTPRIORITY_FIX.md  IMPLEMENTATION_SUMMARY_FILE_INPUT.md  INSTALL.md  (+63 more)
.cap-dev-pipe/: arc-review-config.json  pipeline.env  resolve-provenance.py  run-artisan.sh  run-cap-delivery.sh  run-plan-ingestion.sh  run-prime-contractor.sh  run-prime-execution-modes.sh  startd8-sdk-cap-dlv-pipe.sh
.incident-mimir-2026-06-01/: mimir-config.configmap.bak.yaml  mimir-rules.configmap.bak.yaml  mimir.deploy.bak.yaml
.startd8/: micro_prime.json
brief/: pricing-task-brief.md
dashboards/: README.md  lead-contractor-progress.json  primary-contractor-progress.json  startd8-cost-tracking.json  startd8-metrics.json  startd8-sdk-overview.json
design/: Prompt_template_investigate_n_plan.md  SKILL_AGENT_CORE_DESIGN.md  STARTD8_CHAT_MENU_PLAN.md  USAGE_LIMITS_AGENT_PAUSE_INTEGRATION.md
docs/: AGENT_CONFIGURATION_GUIDE_v1.md  AGENT_PROMPT.md  AGENT_UPDATE_INSTRUCTIONS.md  ANALYZE_LAST_ERROR_PIPELINE_DESIGN.md  ANTI_PATTERN_EXPLORATORY_COUPLING_DRIFT.md  API_KEY_EXPORT_IMPORT.md  API_REFERENCE_v1.md  ARTISAN_MODEL_CORRECTION.md  ARTISAN_PI-001_RUN_ISSUES.md  ARTISAN_REQUIREMENTS.md  ARTISAN_WORKFLOW_GUIDE.md  ARTISAN_WORKFLOW_ISSUES_CATALOG.md  ARTISAN_WORKFLOW_TESTING_ISSUES_SESSION_PLUS_EXTERNAL.md  BUGFIX_DATETIME_STORAGE.md  CHANGELOG_v1.md  CI_FIDELITY_GATE.md  COMPLETION_REPORT.md  CONTEXTCORE_WORKFLOW_AUTOMATION.md  CONTEXTCORE_WORKFLOW_INTEGRATION_PLAN.md  CONTROL_PANEL_GENERATION_REQUIREMENTS.md  COST_TRACKING_USER_GUIDE.md  CREATION_SUMMARY.md  CUSTOM_PREFLIGHT_RULES_GUIDE.md  DEPLOY_HARNESS_HOWTO.md  DOWNSTREAM_WORKAROUND_CATALOG.md  EDGE_BRAINS_INTRO.md  ERROR_MONITORING_GUIDE.md  FEATURE_WORKFLOW_GUIDE.md  GETTING_STARTED.html  IMPROVEMENT_SUGGESTIONS.md  IMPROVEMENT_SUGGESTIONS_2026-02-12.md  IMPROVEMENT_SUGGESTIONS_CLARIFICATIONS.md  INDEX.md  ITERATIVE_DEV_WORKFLOW.md  JSONNET_MIGRATION_GUIDE.md  LOKI_EXPORT_README.md  LOKI_SETUP_GUIDE.md  MICRO_PRIME_CONFIGURATION_GUIDE.md  MULTI_MODEL_CONSULTATION_GUIDE.html  MULTI_MODEL_CONSULTATION_GUIDE.md  (+36 more)
examples/: ASYNC_FEATURES.md  advanced_benchmark.py  async_features_demo.py  basic_usage.py  document_enhancement_example.py  git_integration.py  iterative_dev_workflow_example.py  orchestration_example.py  provider_examples.py
k8s/: startd8-notification-policy.yaml  startd8-service-monitor.yaml
mcp/startd8-mcp-builder/: .gitignore  CLAUDE.md  CODE_REVIEW_BEFORE_TESTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIST_RESOURCES_ERROR_FIX.md  MASTER_TASK_LIST.md  MCP_SKILL_ISSUE_SUMMARY.md  OBSERVABILITY_QUESTIONS.md  OBSERVABILITY_SETUP.md  PROJECT_CHARTER.md  PROJECT_STATUS.md  QUICKSTART.md  README_SERVER.md  REFACTOR_IMPLEMENTATION_SUMMARY.md  STARTD8_USE_SKILL_REFACTOR_STATUS.md  TASK_RUNNER_IMPROVEMENTS.md  TEST_PLAN.md  TUI_MCP_INTEGRATION.md  UV_GUIDE.md  cursor-mcp-config.json  env.sample  manifest.json  mcp_control.html  mcp_control_server.py  pyproject.toml  requirements-dev.txt  requirements-server.txt  run_mcp.sh  run_mcp_anthropic_local.sh  startd8_mcp.py  startd8_use_skill_refactor_plan.md  task_runner_q_and_a.md  task_runner_questions.md  test_server.py
mcp/startd8-mcp-builder/.github/: CODEOWNERS  dependabot.yml
mcp/startd8-mcp-builder/.github/workflows/: ci.yml
mcp/startd8-mcp-builder/alloy/: startd8_mcp.alloy
mcp/startd8-mcp-builder/context/: anthropic_context_v1.md  antigravity_context_v1.md  cursor_context_v1.md  evaluations_and_workflows_v1.md  glossary_v1.md  mcp_integration_plan_v1.md  sdk_and_fmls_v1.md  startd8_overview_v1.md
mcp/startd8-mcp-builder/improvement_plan/: IMPROVEMENT_TASK_LIST.md
mcp/startd8-mcp-builder/improvement_plan/feature_groups/: FG01_core_architecture.md  FG02_response_contracts.md  FG03_skills_and_resources.md  FG04_skill_execution_and_providers.md  FG05_task_runner_hardening.md  FG06_observability_and_devex.md
mcp/startd8-mcp-builder/startd8_mcp_server/: __init__.py  server.py
mcp/startd8-mcp-builder/tasks/: TASK-001-mcp-server-core.md  TASK-002-json-first-refactor.md  TASK-003-evaluation-framework.md  TASK-004-benchmarking-workflow.md  TASK-005-cursor-integration.md  TASK-006-evaluation-reporter.md  TASK-007-sdk-integration.md  TASK-101-test-suite.md  TASK-102-test-coverage.md  TASK-201-api-reference.md  TASK-202-troubleshooting.md  _TASK_INDEX.md
mcp/startd8-mcp-builder/tests/: conftest.py  fixtures.py  test_01_basic.py  test_02_skill_discovery.py  test_03_list_skills.py  test_04_get_skill_info.py  test_05_use_skill.py  test_06_input_validation.py  test_07_mcp_protocol.py  test_08_resources.py  test_09_error_handling.py  test_10_performance.py  test_12_workflows.py  test_13_skill_tool_registration.py  test_15_concierge_readonly_floor.py  test_16_kickoff_status.py  test_tasks_run.py
output/: startd8-sdk-artifact-manifest.yaml  startd8-sdk-projectcontext.yaml
results/: baseline-2026-03-13.json  baseline-v2-2026-03-13.json  baseline-v3-2026-03-13.json  baseline-v4-2026-03-13.json  qwen-14b-2026-03-13.json  temp-0.0-2026-03-13.json  temp-0.2-2026-03-13.json
scripts/: adopt-prior-PI-001.sh  (+110 more)
(+4004 files in other folders)
