[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "startd8"
version = "0.4.0"
description = "startd8-SDK: a software-engineering harness for LLM-assisted development — Requirements-to-Capabilities delivery, deterministic ($0) code generation, plus multi-LLM benchmarking and cloud/edge model evaluation"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.9"
authors = [
    {name = "StartDate Contributors", email = "contributors@startdate.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0.0",
    "markdown>=3.0.0",  # build-time render of content-page prose (.md → HTML); generated app stays markdown-free
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
all = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
java = ["javalang>=0.13.0"]
csharp = ["tree-sitter>=0.24.0", "tree-sitter-c-sharp>=0.23.0"]
validation = ["jsonschema>=4.0.0"]
# CKG Phase 1 (REQ-CKG-710): the SCIP reader parses the vendored scip_pb2 via protobuf.
# Optional — core + the toolchain-free cross-file signatures run without it; the Node
# `scip-typescript` tool is a separate (non-pip) prerequisite, see docs.
# Lower bound must be >= the vendored scip_pb2 gencode version (6.33.5) — an older
# runtime raises VersionError("Runtime version cannot be older than the linked gencode").
code-observability = ["protobuf>=6.33.5"]
# Benchmark CodeBLEU contamination/memorization probe (FR-47, benchmark_matrix.contamination).
# Optional + heavy; the probe degrades gracefully (FR-32) when absent. Pinned to the 0.23.x
# tree-sitter line, which works for ALL 5 languages on Python 3.14 (verified). CAVEATS:
# (1) codebleu 0.7.0 nominally pins tree-sitter<0.23 — 0.23.x runs in practice but pip will warn;
# (2) `tree-sitter-c-sharp` bumped its grammar ABI from <=14 to 15 at version 0.23.1; the
# codebleu-compatible tree-sitter 0.23.2 core only accepts ABI 13-14, so the C# parser MUST stay
# at 0.23.0 (==, not >=) — 0.23.1+ raises "Incompatible Language version 15"; the other parsers
# are still ABI <=14. (3) do NOT co-install with the `csharp` extra (it pins tree-sitter>=0.24.0).
contamination = [
    "codebleu==0.7.0",
    "tree-sitter>=0.23,<0.24",
    "tree-sitter-python>=0.23,<0.24",
    "tree-sitter-go>=0.23,<0.24",
    "tree-sitter-java>=0.23,<0.24",
    "tree-sitter-javascript>=0.23,<0.24",
    "tree-sitter-c-sharp==0.23.0",  # 0.23.1+ = grammar ABI 15, rejected by the 0.23.2 core (max 14)
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
openllmetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-anthropic>=0.50.0",
    "opentelemetry-instrumentation-openai>=0.50.0",
]
server = [
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "hypothesis>=6.0.0",
    "cryptography>=42.0.0",
    "jsonschema>=4.0.0",
    "respx>=0.21.0",
    # NFR-AES-5: Jsonnet toolchain for the dashboard_creator compile-based golden tests.
    # Provides the `_gojsonnet` backend compiler.py already supports, so compiled-JSON
    # goldens run without a separately-installed `jsonnet` binary. Tests that compile
    # skip-with-reason when the toolchain is absent (see tests/.../test_cosmetic_defaults.py).
    "gojsonnet>=0.20.0",
    # GraphQL behavioral lane: the reference-oracle test builds a schema with graphql-core
    # (pure-python). The test gates with importorskip("graphql"), so it skips when absent.
    "graphql-core>=3.2",
]

[project.scripts]
startd8 = "startd8.cli:app"

[project.entry-points."startd8.providers"]
anthropic = "startd8.providers.anthropic:AnthropicProvider"
openai = "startd8.providers.openai:OpenAIProvider"
ollama = "startd8.providers.openai:OllamaProvider"
mock = "startd8.providers.mock:MockProvider"
gemini = "startd8.providers.gemini:GeminiProvider"
mistral = "startd8.providers.mistral:MistralProvider"
deepseek = "startd8.providers.deepseek:DeepSeekProvider"
jetson = "startd8.providers.jetson:JetsonProvider"
nim = "startd8.providers.openai:NIMProvider"
openai-compatible = "startd8.providers.openai:OpenAICompatibleProvider"

[project.entry-points."startd8.workflows"]
pipeline = "startd8.workflows.builtin.pipeline_workflow:PipelineWorkflow"
doc-enhancement = "startd8.workflows.builtin.doc_enhancement_workflow:DocEnhancementWorkflow"
iterative-dev = "startd8.workflows.builtin.iterative_dev_workflow:IterativeDevWorkflowWrapper"
design-polish = "startd8.workflows.builtin.design_polish_workflow:DesignPolishWorkflow"
critical-review = "startd8.workflows.builtin.critical_review_workflow:CriticalReviewWorkflow"
primary-contractor = "startd8.workflows.builtin.primary_contractor_workflow:PrimaryContractorWorkflow"
primary-contractor-contextcore = "startd8.workflows.builtin.primary_contractor_contextcore_workflow:PrimaryContractorContextCoreWorkflow"
lead-contractor = "startd8.workflows.builtin.primary_contractor_workflow:LeadContractorWorkflow"
lead-contractor-contextcore = "startd8.workflows.builtin.primary_contractor_contextcore_workflow:LeadContractorContextCoreWorkflow"
policy-analysis = "startd8.workflows.builtin.policy_analysis_workflow:PolicyAnalysisWorkflow"
plain-language = "startd8.workflows.builtin.plain_language_workflow:PlainLanguageWorkflow"
plan-ingestion = "startd8.workflows.builtin.plan_ingestion_workflow:PlanIngestionWorkflow"
domain-preflight = "startd8.workflows.builtin.domain_preflight_workflow:DomainPreflightWorkflow"
convergent-review = "startd8.workflows.builtin.convergent_review_workflow:ConvergentReviewWorkflow"
architectural-review-log = "startd8.workflows.builtin.architectural_review_log_workflow:ArchitecturalReviewLogWorkflow"
dashboard-create = "startd8.dashboard_creator.workflow:DashboardCreatorWorkflow"
prime-contractor = "startd8.workflows.builtin.prime_contractor_workflow:PrimeContractorWorkflowAdapter"

# Prime Contractor entry points for plugin discovery
[project.entry-points."startd8.preflight_rules"]
# Third-party preflight rules can register here:
# my_rule = "my_package.rules:MyRule"

[project.entry-points."startd8.languages"]
python = "startd8.languages.python:PythonLanguageProfile"
go = "startd8.languages.go:GoLanguageProfile"
nodejs = "startd8.languages.nodejs:NodeLanguageProfile"
java = "startd8.languages.java:JavaLanguageProfile"
csharp = "startd8.languages.csharp:CSharpLanguageProfile"
vue = "startd8.languages.vue:VueLanguageProfile"
prisma = "startd8.languages.prisma:PrismaLanguageProfile"

# Secrets backends — SecretsProviderRegistry consults these to source credentials.
# `local` preserves env + ~/.startd8/config.json; `doppler` hydrates from doppler.com.
[project.entry-points."startd8.secrets"]
local = "startd8.secrets.local:LocalSecretsProvider"
doppler = "startd8.secrets.doppler:DopplerSecretsProvider"

[project.entry-points."startd8.contractors.instrumentors"]
logging = "startd8.contractors.adapters.standalone:LoggingInstrumentor"

[project.entry-points."startd8.contractors.size_estimators"]
heuristic = "startd8.contractors.adapters.standalone:HeuristicSizeEstimator"

[project.entry-points."startd8.contractors.merge_strategies"]
simple = "startd8.contractors.adapters.standalone:SimpleMergeStrategy"

# Deterministic-file providers — the prime-contractor skip-hook consults these to decide a
# target file is deterministically provided + in-sync (no stack coupling in the core).
[project.entry-points."startd8.contractors.deterministic_providers"]
prisma-zod = "startd8.frontend_codegen.provider:PrismaZodFileProvider"
pydantic-sqlmodel = "startd8.backend_codegen.provider:PydanticSQLModelProvider"
scaffold = "startd8.scaffold_codegen.provider:ScaffoldFileProvider"
composite-view = "startd8.view_codegen.provider:CompositeViewProvider"
presentation-polish = "startd8.presentation_polish.provider:PresentationPolishFileProvider"

[project.urls]
Homepage = "https://github.com/neil-the-nowledgeable/startd8-sdk"
Repository = "https://github.com/neil-the-nowledgeable/startd8-sdk"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
startd8 = [
    "prompt_builder/templates/*.yaml",
    "help_content/*.yaml",
    "evaluation/corpus/*.yaml",
    "contractors/artisan_phases/prompts/*.yaml",
    "workflows/builtin/prompts/*.yaml",
    "implementation_engine/prompts/*.yaml",
    "concierge_templates/*.md",
    "concierge_templates/inputs/*.yaml",
]




